tests/NormalTests/paczka1/fuzzy1/19381861.err
Error in line 2: iU0MGsUCpCV S898 43,4
Error in line 12: BZIoZHRPM S673 55,8
Error in line 27: SRBuGl79 S171 140,71
Error in line 26: SRBuGl79 S171 62,0
